--- a/docs/docs/package.json
+++ b/docs/docs/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.4.2",
     "@astrojs/starlight": "^0.37.0",
+    "@astrojs/vercel": "^8.0.4",
     "astro": "^5.6.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sharp": "^0.34.2",
     "starlight-theme-galaxy": "^0.5.2"
   }
