--- a/docs/docs/tsconfig.json
+++ b/docs/docs/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@astrojs/starlight/*": ["node_modules/@astrojs/starlight/*"],
+      "~components/*": ["src/components/*"]
+    }
+  },
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
