--- a/docs/docs/tsconfig.json
+++ b/docs/docs/tsconfig.json
@@ -7,6 +7,6 @@
       "~components/*": ["src/components/*"]
     }
   },
-  "include": [".astro/types.d.ts", "**/*"],
+  "include": [".astro/types.d.ts"],
   "exclude": ["dist"]
 }
